--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"babel-loader": "^8.1.0",
 		"gulp": "^4.0.2",
 		"gulp-pug": "^4.0.1",
-		"gulp-sourcemaps": "^2.6.5"
+		"gulp-sourcemaps": "^2.6.5",
+		"swiper": "^6.3.3"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.11.6",
@@ -35,6 +37,9 @@
 		"gulp-uglify-es": "^2.0.0",
 		"gulp-webp": "^4.0.1",
 		"gulp-webp-css": "^1.1.0",
-		"gulp-webp-html": "^1.0.2"
+		"gulp-webp-html": "^1.0.2",
+		"prettier": "^2.1.2",
+		"webpack": "^5.1.3",
+		"webpack-stream": "^6.1.0"
 	}
 }
