--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
 		"gulp": "^4.0.2",
 		"gulp-pug": "^4.0.1",
 		"gulp-sourcemaps": "^2.6.5",
+		"gulp-svgmin": "^3.0.0",
+		"gulp-svgo": "^2.2.1",
 		"swiper": "^6.3.3"
 	},
 	"devDependencies": {
