--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
 	"license": "ISC",
 	"dependencies": {
 		"babel-loader": "^8.1.0",
+		"chart.js": "^2.9.4",
+		"chartist": "^0.11.4",
 		"gulp": "^4.0.2",
 		"gulp-cheerio": "^1.0.0",
 		"gulp-pug": "^4.0.1",
