--- a/package.json
+++ b/package.json
@@ -10,20 +10,23 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"babel-loader": "^8.1.0",
 		"chart.js": "^2.9.4",
-		"chartist": "^0.11.4",
 		"gulp": "^4.0.2",
 		"gulp-cheerio": "^1.0.0",
 		"gulp-pug": "^4.0.1",
 		"gulp-sourcemaps": "^2.6.5",
 		"gulp-svgmin": "^3.0.0",
 		"gulp-svgo": "^2.2.1",
+		"moment": "^2.29.1",
 		"swiper": "^6.3.3"
 	},
 	"devDependencies": {
+		"@htmlacademy/editorconfig-cli": "1.x",
 		"@babel/core": "^7.11.6",
 		"@babel/preset-env": "^7.11.5",
+		"babel-core": "^6.26.3",
+		"babel-loader": "^8.2.1",
+		"babel-preset-latest": "^6.24.1",
 		"browser-sync": "^2.26.12",
 		"del": "^5.1.0",
 		"gulp-autoprefixer": "^7.0.1",
@@ -45,7 +48,31 @@
 		"gulp-webp-css": "^1.1.0",
 		"gulp-webp-html": "^1.0.2",
 		"prettier": "^2.1.2",
+		"concurrently": "5.1.0",
+		"copy-webpack-plugin": "5.1.1",
+		"css-loader": "3.5.1",
+		"csso-webpack-plugin": "2.0.0-beta.1",
+		"eslint": "6.5.1",
+		"eslint-config-htmlacademy": "0.5.2",
+		"gulp-svgstore": "7.0.1",
+		"html-loader": "1.1.0",
+		"html-webpack-plugin": "4.2.0",
+		"lodash": "4.17.15",
+		"mini-css-extract-plugin": "0.9.0",
+		"node-sass": "4.13.1",
+		"pixel-glass": "1.0.13",
+		"posthtml": "0.12.0",
+		"posthtml-include": "1.2.0",
+		"posthtml-loader": "1.0.2",
+		"posthtml-parser": "0.4.2",
+		"sass-loader": "8.0.2",
+		"style-loader": "1.1.3",
+		"stylelint": "9.10.x",
+		"stylelint-config-htmlacademy": "0.1.x",
 		"webpack": "^5.1.3",
+		"webpack-cli": "3.3.11",
+		"webpack-dev-server": "3.10.3",
+		"write-file-webpack-plugin": "4.5.1",
 		"webpack-stream": "^6.1.0"
 	}
 }
