--- a/package.json
+++ b/package.json
@@ -21,14 +21,20 @@
 		"swiper": "^6.3.3"
 	},
 	"devDependencies": {
-		"@htmlacademy/editorconfig-cli": "1.x",
 		"@babel/core": "^7.11.6",
 		"@babel/preset-env": "^7.11.5",
+		"@htmlacademy/editorconfig-cli": "1.x",
 		"babel-core": "^6.26.3",
 		"babel-loader": "^8.2.1",
 		"babel-preset-latest": "^6.24.1",
 		"browser-sync": "^2.26.12",
+		"concurrently": "5.1.0",
+		"copy-webpack-plugin": "5.1.1",
+		"css-loader": "3.5.1",
+		"csso-webpack-plugin": "2.0.0-beta.1",
 		"del": "^5.1.0",
+		"eslint": "6.5.1",
+		"eslint-config-htmlacademy": "0.5.2",
 		"gulp-autoprefixer": "^7.0.1",
 		"gulp-babel": "^8.0.0",
 		"gulp-cheerio-clean-svg": "github:Hiswe/gulp-cheerio-clean-svg",
@@ -41,20 +47,13 @@
 		"gulp-rename": "^2.0.0",
 		"gulp-sass": "^4.1.0",
 		"gulp-svg-sprite": "^1.5.0",
+		"gulp-svgstore": "7.0.1",
 		"gulp-ttf2woff": "^1.1.1",
 		"gulp-ttf2woff2": "^3.0.0",
 		"gulp-uglify-es": "^2.0.0",
 		"gulp-webp": "^4.0.1",
 		"gulp-webp-css": "^1.1.0",
 		"gulp-webp-html": "^1.0.2",
-		"prettier": "^2.1.2",
-		"concurrently": "5.1.0",
-		"copy-webpack-plugin": "5.1.1",
-		"css-loader": "3.5.1",
-		"csso-webpack-plugin": "2.0.0-beta.1",
-		"eslint": "6.5.1",
-		"eslint-config-htmlacademy": "0.5.2",
-		"gulp-svgstore": "7.0.1",
 		"html-loader": "1.1.0",
 		"html-webpack-plugin": "4.2.0",
 		"lodash": "4.17.15",
@@ -65,14 +64,16 @@
 		"posthtml-include": "1.2.0",
 		"posthtml-loader": "1.0.2",
 		"posthtml-parser": "0.4.2",
+		"prettier": "^2.1.2",
 		"sass-loader": "8.0.2",
 		"style-loader": "1.1.3",
 		"stylelint": "9.10.x",
 		"stylelint-config-htmlacademy": "0.1.x",
+		"vanillajs-datepicker": "^1.0.3",
 		"webpack": "^5.1.3",
 		"webpack-cli": "3.3.11",
 		"webpack-dev-server": "3.10.3",
-		"write-file-webpack-plugin": "4.5.1",
-		"webpack-stream": "^6.1.0"
+		"webpack-stream": "^6.1.0",
+		"write-file-webpack-plugin": "4.5.1"
 	}
 }
