--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@fullcalendar/core": "^5.4.0",
+		"@fullcalendar/daygrid": "^5.4.0",
 		"chart.js": "^2.9.4",
 		"gulp": "^4.0.2",
 		"gulp-cheerio": "^1.0.0",
@@ -18,6 +20,7 @@
 		"gulp-svgmin": "^3.0.0",
 		"gulp-svgo": "^2.2.1",
 		"moment": "^2.29.1",
+		"simple-datatables": "^2.1.13",
 		"swiper": "^6.3.3"
 	},
 	"devDependencies": {
