--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"gulp-svgo": "^2.2.1",
 		"moment": "^2.29.1",
 		"simple-datatables": "^2.1.13",
+		"simple-parallax-js": "^5.6.2",
 		"swiper": "^6.3.3"
 	},
 	"devDependencies": {
