--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@fullcalendar/core": "^5.4.0",
-        "@fullcalendar/daygrid": "^5.4.0",
+        "@fullcalendar/core": "^5.5.0",
+        "@fullcalendar/daygrid": "^5.5.0",
         "@fullcalendar/list": "^5.4.0",
         "@fullcalendar/timegrid": "^5.4.0",
         "chart.js": "^2.9.4",
+        "dom7": "^3.0.0",
         "fullcalendar": "^5.4.0",
         "fullcalendar-scheduler": "^5.4.0",
         "gulp": "^4.0.2",
@@ -26,12 +27,12 @@
         "moment": "^2.29.1",
         "simple-datatables": "^2.1.13",
         "simple-parallax-js": "^5.6.2",
-        "swiper": "^6.3.3",
+        "swiper": "^6.4.5",
         "tinygesture": "^1.1.4"
     },
     "devDependencies": {
-        "@babel/core": "^7.11.6",
-        "@babel/preset-env": "^7.11.5",
+        "@babel/core": "^7.12.10",
+        "@babel/preset-env": "^7.12.11",
         "@htmlacademy/editorconfig-cli": "1.x",
         "babel-core": "^6.26.3",
         "babel-loader": "^8.2.1",
@@ -40,7 +41,6 @@
         "concurrently": "5.1.0",
         "copy-webpack-plugin": "5.1.1",
         "css-loader": "^4.3.0",
-        "mini-css-extract-plugin": "^1.2.0",
         "csso-webpack-plugin": "2.0.0-beta.1",
         "del": "^5.1.0",
         "eslint": "6.5.1",
@@ -49,7 +49,7 @@
         "gulp-babel": "^8.0.0",
         "gulp-cheerio-clean-svg": "github:Hiswe/gulp-cheerio-clean-svg",
         "gulp-clean-css": "^4.3.0",
-        "gulp-file-include": "^2.2.2",
+        "gulp-file-include": "^2.3.0",
         "gulp-group-css-media-queries": "^1.2.2",
         "gulp-imagemin": "^7.1.0",
         "gulp-notify": "^3.2.0",
@@ -67,6 +67,7 @@
         "html-loader": "1.1.0",
         "html-webpack-plugin": "4.2.0",
         "lodash": "4.17.15",
+        "mini-css-extract-plugin": "^1.2.0",
         "node-sass": "4.13.1",
         "pixel-glass": "1.0.13",
         "posthtml": "0.12.0",
@@ -78,8 +79,8 @@
         "style-loader": "1.1.3",
         "stylelint": "9.10.x",
         "stylelint-config-htmlacademy": "0.1.x",
-        "vanillajs-datepicker": "^1.0.3",
-        "webpack": "^5.3.0",
+        "vanillajs-datepicker": "^1.1.0",
+        "webpack": "^5.11.0",
         "webpack-cli": "^4.1.0",
         "webpack-dev-server": "3.10.3",
         "webpack-stream": "^6.1.0",
