--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
         "babel-preset-latest": "^6.24.1",
         "browser-sync": "^2.26.12",
         "concurrently": "5.1.0",
-        "copy-webpack-plugin": "5.1.1",
+        "copy-webpack-plugin": "^7.0.0",
         "css-loader": "^4.3.0",
         "csso-webpack-plugin": "2.0.0-beta.1",
         "del": "^5.1.0",
@@ -66,7 +66,7 @@
         "gulp-webp-html": "^1.0.2",
         "html-loader": "1.1.0",
         "html-webpack-plugin": "4.2.0",
-        "lodash": "4.17.15",
+        "lodash": "^4.17.20",
         "mini-css-extract-plugin": "^1.2.0",
         "node-sass": "4.13.1",
         "pixel-glass": "1.0.13",
@@ -77,12 +77,12 @@
         "prettier": "^2.1.2",
         "sass-loader": "8.0.2",
         "style-loader": "1.1.3",
-        "stylelint": "9.10.x",
+        "stylelint": "^13.8.0",
         "stylelint-config-htmlacademy": "0.1.x",
-        "vanillajs-datepicker": "^1.1.0",
-        "webpack": "^5.11.0",
-        "webpack-cli": "^4.1.0",
-        "webpack-dev-server": "3.10.3",
+        "vanillajs-datepicker": "^1.1.1",
+        "webpack": "^5.13.0",
+        "webpack-cli": "^4.3.1",
+        "webpack-dev-server": "^3.11.1",
         "webpack-stream": "^6.1.0",
         "write-file-webpack-plugin": "4.5.1"
     }
