--- a/package.json
+++ b/package.json
@@ -1,89 +1,88 @@
 {
-    "name": "project",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "@fullcalendar/core": "^5.5.0",
-        "@fullcalendar/daygrid": "^5.5.0",
-        "@fullcalendar/list": "^5.4.0",
-        "@fullcalendar/timegrid": "^5.4.0",
-        "chart.js": "^2.9.4",
-        "dom7": "^3.0.0",
-        "fullcalendar": "^5.4.0",
-        "fullcalendar-scheduler": "^5.4.0",
-        "gulp": "^4.0.2",
-        "gulp-cheerio": "^1.0.0",
-        "gulp-pug": "^4.0.1",
-        "gulp-sourcemaps": "^2.6.5",
-        "gulp-svgmin": "^3.0.0",
-        "gulp-svgo": "^2.2.1",
-        "moment": "^2.29.1",
-        "simple-datatables": "^2.1.13",
-        "simple-parallax-js": "^5.6.2",
-        "swiper": "^6.4.5",
-        "tinygesture": "^1.1.4"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.12.10",
-        "@babel/preset-env": "^7.12.11",
-        "@htmlacademy/editorconfig-cli": "1.x",
-        "babel-core": "^6.26.3",
-        "babel-loader": "^8.2.1",
-        "babel-preset-latest": "^6.24.1",
-        "browser-sync": "^2.26.12",
-        "concurrently": "5.1.0",
-        "copy-webpack-plugin": "^7.0.0",
-        "css-loader": "^4.3.0",
-        "csso-webpack-plugin": "2.0.0-beta.1",
-        "del": "^5.1.0",
-        "eslint": "6.5.1",
-        "eslint-config-htmlacademy": "0.5.2",
-        "gulp-autoprefixer": "^7.0.1",
-        "gulp-babel": "^8.0.0",
-        "gulp-cheerio-clean-svg": "github:Hiswe/gulp-cheerio-clean-svg",
-        "gulp-clean-css": "^4.3.0",
-        "gulp-file-include": "^2.3.0",
-        "gulp-group-css-media-queries": "^1.2.2",
-        "gulp-imagemin": "^7.1.0",
-        "gulp-notify": "^3.2.0",
-        "gulp-plumber": "^1.2.1",
-        "gulp-rename": "^2.0.0",
-        "gulp-sass": "^4.1.0",
-        "gulp-svg-sprite": "^1.5.0",
-        "gulp-svgstore": "7.0.1",
-        "gulp-ttf2woff": "^1.1.1",
-        "gulp-ttf2woff2": "^3.0.0",
-        "gulp-uglify-es": "^2.0.0",
-        "gulp-webp": "^4.0.1",
-        "gulp-webp-css": "^1.1.0",
-        "gulp-webp-html": "^1.0.2",
-        "html-loader": "1.1.0",
-        "html-webpack-plugin": "4.2.0",
-        "lodash": "^4.17.20",
-        "mini-css-extract-plugin": "^1.2.0",
-        "node-sass": "4.13.1",
-        "pixel-glass": "1.0.13",
-        "posthtml": "0.12.0",
-        "posthtml-include": "1.2.0",
-        "posthtml-loader": "1.0.2",
-        "posthtml-parser": "0.4.2",
-        "prettier": "^2.1.2",
-        "sass-loader": "8.0.2",
-        "style-loader": "1.1.3",
-        "stylelint": "^13.8.0",
-        "stylelint-config-htmlacademy": "0.1.x",
-        "vanillajs-datepicker": "^1.1.1",
-        "webpack": "^5.13.0",
-        "webpack-cli": "^4.3.1",
-        "webpack-dev-server": "^3.11.1",
-        "webpack-stream": "^6.1.0",
-        "write-file-webpack-plugin": "4.5.1"
-    }
+  "name": "RGSU-student-portal",
+  "version": "1.0.0",
+  "description": "",
+  "main": "gulpfile.js",
+  "dependencies": {
+    "chart.js": "^2.9.4",
+    "jquery": "^3.5.1",
+    "moment": "^2.29.1",
+    "simple-parallax-js": "^5.6.2",
+    "swiper": "^6.4.8",
+    "tinygesture": "^1.1.4"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@htmlacademy/editorconfig-cli": "^1.0.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.2.2",
+    "babel-preset-latest": "^6.24.1",
+    "browser-sync": "^2.26.14",
+    "concurrently": "^5.3.0",
+    "copy-webpack-plugin": "^7.0.0",
+    "css-loader": "^5.0.1",
+    "csso-webpack-plugin": "^2.0.0-beta.1",
+    "del": "^6.0.0",
+    "eslint": "^7.18.0",
+    "eslint-config-htmlacademy": "^2.0.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-babel": "^8.0.0",
+    "gulp-cheerio": "^1.0.0",
+    "gulp-cheerio-clean-svg": "github:Hiswe/gulp-cheerio-clean-svg",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-group-css-media-queries": "^1.2.2",
+    "gulp-imagemin": "^7.1.0",
+    "gulp-notify": "^3.2.0",
+    "gulp-plumber": "^1.2.1",
+    "gulp-pug": "^4.0.1",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^4.1.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-svg-sprite": "^1.5.0",
+    "gulp-svgmin": "^3.0.0",
+    "gulp-svgo": "^2.2.1",
+    "gulp-svgstore": "^7.0.1",
+    "gulp-ttf2woff": "^1.1.1",
+    "gulp-ttf2woff2": "^4.0.1",
+    "gulp-uglify-es": "^2.0.0",
+    "gulp-webp": "^4.0.1",
+    "gulp-webp-css": "^1.1.0",
+    "gulp-webp-html": "^1.0.2",
+    "html-loader": "^1.3.2",
+    "html-webpack-plugin": "^4.5.1",
+    "lodash": "^4.17.20",
+    "mini-css-extract-plugin": "^1.3.4",
+    "node-sass": "^5.0.0",
+    "pixel-glass": "^1.0.13",
+    "posthtml": "^0.15.1",
+    "posthtml-include": "^1.6.0",
+    "posthtml-loader": "^2.0.1",
+    "posthtml-parser": "^0.6.0",
+    "prettier": "^2.2.1",
+    "sass-loader": "^10.1.1",
+    "style-loader": "^2.0.0",
+    "stylelint": "^13.9.0",
+    "stylelint-config-htmlacademy": "^0.1.4",
+    "webpack": "^5.18.0",
+    "webpack-cli": "^4.4.0",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-stream": "^6.1.2",
+    "write-file-webpack-plugin": "^4.5.1"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/RGSU/RGSU-student-portal.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/RGSU/RGSU-student-portal/issues"
+  },
+  "homepage": "https://github.com/RGSU/RGSU-student-portal#readme"
 }
